# data-mover

./: .gitignore  Cargo.toml  Dockerfile  README.md  run_debug.sh
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: error.rs  lib.rs
core/src/constants/: mod.rs  postgresql.rs
core/src/db/: database.rs  db_type.rs  mod.rs
core/src/db/mongodb/: mod.rs  mongodb.rs  mongodb_data_types.rs  mongodb_provider.rs  mongodb_receiver.rs
core/src/db/postgresql/: mod.rs  postgresql.rs  postgresql_data_types.rs  postgresql_provider.rs  postgresql_receiver.rs
core/src/migrator/: data_provider.rs  data_receiver.rs  migrator.rs  migrator_steps.rs  mod.rs
core/src/models/: connection.rs  data_definitions.rs  migration_execution_settings.rs  migration_setting.rs  migration_stats.rs  mod.rs
core/src/parsers/: mod.rs
core/src/utils/: file_utils.rs
core/src/writers/: data_container_definition_writer.rs  data_writer.rs  mod.rs
dumps/: mongodb_dumps.json  postgresql_dumps.sql
e2e/: docker-compose.yml
