[package]
name = "data-mover-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = "2.1.4"
clap = { version = "4.4.18", features = ["derive"] }
dotenv = "0.15.0"
tokio = { version ="1.35.1", features = ["full"] }
data-mover-core = { path = "../core" }
tokio-postgres = "0.7.10"

[[bin]]
name = "data-mover"
path = "src/main.rs"