[package]
name = "data-mover-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = "2.1.4"
clap = { version = "4.4.18", features = ["derive"] }
dotenv = "0.15.0"
tokio = { version ="1.35.1", features = ["full"] }
data-mover-core = { path = "../core" }
tokio-postgres = "0.7.10"
log = "0.4"
env_logger = "0.11.3"

[[bin]]
name = "data-mover"
path = "src/main.rs"