[package]
name = "data-mover-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
diesel = "2.1.4"
dotenv = "0.15.0"
mongodb = "2.8.0"
tokio = { version ="1.35.1", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.33"
thiserror = "1.0.56"
url = "2.5.0"